# Motor_Control

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cppcheck.json  cppcheck_suppressions.txt
docs/: UG_USER_GUIDE.md  UM_USER_MANUAL.md
docs/design/: ICD.md  SAD.md  SDD_control.md  SDD_drive.md  SDD_estimator.md  SDD_math.md  SDD_platform.md  SDD_reconstruct.md
docs/overview/: 01_project_charter.md  02_glossary.md
docs/process/: CODING_STANDARD.md  COMPILER_SUPPORT_MATRIX.md  DEVELOPMENT_PLAN.md  RELEASE_CHECKLIST.md  REVIEW_TODO.md
docs/requirements/: RTM.md  SRS.md
docs/safety/: DEVIATION_RECORD.md  FMEA.md  HARA.md  MISRA_COMPLIANCE_PLAN.md  SAFETY_CASE.md  SAFETY_PLAN.md
docs/superpowers/plans/: 2026-04-29-debug-calibration-utility-plan.md
docs/superpowers/specs/: 2026-04-29-debug-calibration-utility-design.md
docs/test/: BENCH_PLAN.md  ITS.md  UTS.md  VTS.md
include/: mc_api.h  mc_cfg.h  mc_constants.h  mc_control_foc.h  mc_control_pi.h  mc_control_svpwm.h  mc_debug.h  mc_diag.h  mc_drive_bldc.h  mc_drive_bldc_sensorless.h  mc_drive_pmsm.h  mc_identify.h  mc_limits.h  mc_math.h  mc_port.h  mc_port_adc.h  mc_port_adc_map.h  mc_port_adc_ref.h  mc_port_debug.h  mc_port_fault.h  mc_port_pwm.h  mc_port_resolver.h  mc_port_time.h  mc_reconstruct_1shunt.h  mc_reconstruct_2shunt.h  mc_reconstruct_3shunt.h  mc_sensor_encoder.h  mc_sensor_hall.h  mc_sensor_resolver.h  mc_sensor_sensorless.h  mc_sensor_smo.h  mc_status.h  mc_transform.h  mc_types.h  mc_version.h
src/api/: mc_adc_calibrate.c  mc_api.c  mc_cfg.c  mc_diag.c  mc_identify.c  mc_port_adc_map.c  mc_port_adc_ref.c
src/control/: mc_control_foc.c  mc_control_pi.c  mc_control_svpwm.c  mc_transform.c
src/debug/: mc_debug_fm.c  mc_debug_map.c  mc_debug_transp.c
src/drive/: mc_drive_bldc.c  mc_drive_bldc_sensorless.c  mc_drive_pmsm.c
src/estimator/: mc_sensor_encoder.c  mc_sensor_hall.c  mc_sensor_resolver.c  mc_sensor_sensorless.c  mc_sensor_smo.c
src/math/: mc_math.c
src/platform/: mc_platform_arch.h  mc_platform_bench.h  mc_platform_compiler.h  mc_platform_features.h
src/reconstruct/: mc_reconstruct_1shunt.c  mc_reconstruct_2shunt.c  mc_reconstruct_3shunt.c
tests/bench/: bm_main.c  bm_mc_fast_step.c  bm_mc_pi.c  bm_mc_transforms.c
tests/fault/: ft_main.c  ft_mc_lifecycle_faults.c  ft_mc_reconstruct_faults.c  ft_mc_sensor_faults.c
tests/integration/: it_main.c  it_mc_bldc_hall_pipeline.c  it_mc_bldc_sensorless.c  it_mc_fast_step_scheduling.c  it_mc_identify_pipeline.c  it_mc_pmsm_foc_pipeline.c  it_mc_pmsm_sensorless.c
tests/support/unity/: unity.c  unity.h
tests/unit/: test_mc_adc_calibrate.c  test_mc_api.c  test_mc_auto_tune.c  test_mc_cfg.c  test_mc_control_foc.c  test_mc_control_pi.c  test_mc_control_svpwm.c  test_mc_debug_fm.c  test_mc_debug_map.c  test_mc_debug_transp.c  test_mc_diag.c  test_mc_drive_bldc.c  test_mc_drive_bldc_sensorless.c  test_mc_drive_pmsm.c  test_mc_dtc.c  test_mc_identify.c  test_mc_math.c  test_mc_port_adc_map.c  test_mc_port_adc_ref.c  test_mc_reconstruct_1shunt.c  test_mc_reconstruct_2shunt.c  test_mc_reconstruct_3shunt.c  test_mc_sensor_encoder.c  test_mc_sensor_hall.c  test_mc_sensor_resolver.c  test_mc_sensor_sensorless.c  test_mc_sensor_smo.c  test_mc_transform.c
tests/vector/: vt_main.c  vt_mc_golden_ref.c
toolchains/gcc/: README.md
toolchains/ghs/: README.md
toolchains/iar/: README.md
toolchains/keil/: README.md
